[package]
name = "rust-postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres" ] }
structopt = "0.3.26"
tokio = { version = "1", features = ["full"] }
